syntax = "proto3";

package determined.api.v1;
option go_package = "github.com/determined-ai/determined/proto/pkg/apiv1";

import "determined/group/v1/group.proto";
import "protoc-gen-swagger/options/annotations.proto";

message GetGroupRequest {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
        json_schema: { required: ["group_id"] }
    };
    int32 group_id = 1;
}

message GetGroupResponse {
    determined.group.v1.GroupDetails group = 1;
}

message GroupSearchRequest {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
        json_schema: { required: [] }
    };
    int32 user_id = 1;
}

message GroupSearchResponse {
    repeated determined.group.v1.Group groups = 1;
}

message UpdateGroupRequest {
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_schema) = {
        json_schema: { required: [] }
    };
    int32 group_id = 1;
    string name = 2; //do we need name here for some reason?
    // The user ids of users to add to the group
    repeated int32 add_users = 3;
    // The user ids of users to delete from the group
    repeated int32 remove_users = 4;
} // returns GroupWriteResponse

message GroupWriteResponse {
    determined.group.v1.GroupDetails group = 1;
}

message CreateGroupRequest {
    string name = 1;
    repeated int32 add_users = 2;
} // returns GroupWriteResponse

message DeleteGroupRequest {
    int32 group_id = 1;
}

message DeleteGroupResponse {}

